<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


	<CheckBoxPreference android:title="@string/activeOrigin"
		android:summary="@string/activeOriginSummary" android:key="activeOrigin"></CheckBoxPreference>
	<ListPreference android:entries="@array/listRefreshFrequency"
		android:entryValues="@array/listRefreshFrequency" android:key="refreshFrequency"
		android:summary="@string/refreshFrequencySummary" android:title="@string/refreshFrequency"
		android:scrollHorizontally="false" android:id="@+id/prefRefreshFrequency"
		android:defaultValue="1 Minute"></ListPreference>
	<ListPreference android:entries="@array/listSensorFrequency"
		android:entryValues="@array/listSensorFrequency" android:key="accelFrequency"
		android:summary="@string/accelFrequencySummary" android:title="@string/accelFrequency"
		android:defaultValue="5 Seconds" android:scrollHorizontally="false"
		android:id="@+id/prefAccelFrequency"></ListPreference>

	<ListPreference android:entries="@array/listSensorFrequency"
		android:entryValues="@array/listSensorFrequency" android:key="locationFrequency"
		android:summary="@string/locationFrequencySummary" android:title="@string/locationFrequency"
		android:defaultValue="5 Seconds" android:id="@+id/prefLocationFrequency"
		android:scrollHorizontally="false"></ListPreference>



</PreferenceScreen>
