<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#000">


	<TextView android:layout_gravity="left|center_vertical"
		android:layout_width="wrap_content" android:paddingTop="5dp"
		android:paddingBottom="10dp" android:layout_height="fill_parent"
		android:textSize="15dp" android:layout_weight="0.24"
		android:textStyle="bold" android:typeface="normal" android:text="@string/warningMessage"></TextView>

	<LinearLayout android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:id="@+id/LinearLayout01"
		android:orientation="vertical" android:paddingLeft="10dp"
		android:paddingRight="10dp" android:layout_weight="0.25"
		android:paddingTop="15dp" android:paddingBottom="15dp">
		<TextView android:textSize="20dp" android:typeface="normal"
			android:gravity="left" android:layout_weight="0.2"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:text="@string/originLabel" android:textStyle="bold"
			android:textColor="#FFF" android:paddingLeft="5dp"></TextView>
		<EditText android:layout_width="fill_parent"
			android:layout_weight="0.8" android:textColor="#569"
			android:layout_height="60dp" android:textColorHint="#FDD"
			android:id="@+id/originEditText" android:text="@string/defaultOrigin"
			android:imeOptions="actionNext" android:inputType="textLongMessage"></EditText>
	</LinearLayout>

	<LinearLayout android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:id="@+id/LinearLayout02"
		android:orientation="vertical" android:paddingLeft="10dp"
		android:paddingRight="10dp" android:layout_weight="0.25"
		android:paddingTop="15dp" android:paddingBottom="20dp">
		<TextView android:textSize="20dp" android:typeface="normal"
			android:gravity="left" android:layout_weight="0.2"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:textStyle="bold" android:textColor="#FFF"
			android:paddingLeft="5dp" android:text="@string/destinationLabel"></TextView>
		<EditText android:layout_width="fill_parent"
			android:layout_weight="0.8" android:textColor="#569"
			android:layout_height="60dp" android:textColorHint="#FDD"
			android:id="@+id/destinationEditText" android:text="@string/defaultDestination"
			android:imeOptions="actionDone" android:inputType="textLongMessage"></EditText>
	</LinearLayout>

	<Button android:layout_gravity="center" android:id="@+id/buttonProceed"
		android:text="@string/buttonProceed" android:layout_width="wrap_content"
		android:width="160dp" android:ellipsize="start" android:paddingTop="15dp"
		android:paddingBottom="15dp" android:layout_height="fill_parent"
		android:textSize="22dp" android:typeface="normal"
		android:layout_weight="0.30"></Button>



</LinearLayout>