<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:background="@drawable/list_item_selector">

	<TextView android:id="@+id/detailsList1"
		android:layout_height="30dp" android:layout_width="fill_parent"
		android:text="@string/labelRoadsAhead" android:textColor="#FFF"
		android:gravity="left|center" android:paddingTop="3dp"
		android:paddingBottom="2dp" android:textSize="18dp"></TextView>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" >
		<TextView android:id="@+id/detailsList6"
			android:layout_height="18dp" android:layout_width="fill_parent"
			android:text="@string/labelCongestion" android:textColor="#FFF"
			android:gravity="left|center" android:textSize="11dp"
			android:layout_weight="0.5"></TextView>
		<TextView android:id="@+id/detailsList3"
			android:layout_height="18dp" android:layout_width="fill_parent"
			android:text="@string/labelRoadsAhead" android:textColor="#FFF"
			android:gravity="left|center" android:textSize="11dp"
			android:layout_weight="0.5"></TextView>
	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" >
		<TextView android:id="@+id/detailsList2"
			android:layout_height="18dp" android:layout_width="fill_parent"
			android:text="@string/labelRoadsAhead" android:textColor="#FFF"
			android:gravity="left|center" android:textSize="11dp"
			android:layout_weight="0.5"></TextView>
		<TextView android:id="@+id/detailsList5"
			android:layout_height="18dp" android:layout_width="fill_parent"
			android:text="@string/labelRoadsAhead" android:textColor="#FFF"
			android:gravity="left|center" android:textSize="11dp"
			android:layout_weight="0.5"></TextView>
	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" >
		<TextView android:id="@+id/detailsList4"
			android:layout_height="18dp" android:layout_width="fill_parent"
			android:text="@string/labelRoadsAhead" android:textColor="#FFF"
			android:gravity="left|center" android:textSize="11dp"
			android:layout_weight="0.5"></TextView>
		<TextView android:id="@+id/detailsList7"
			android:layout_height="18dp" android:layout_width="fill_parent"
			android:text="@string/labelDistance" android:textColor="#FFF"
			android:gravity="left|center" android:textSize="11dp"
			android:layout_weight="0.5"></TextView>
	</LinearLayout>
</LinearLayout>